# KanbanGUI.py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: tests.yml
module/: __init__.py  __main__.py  boardUtil.py  db.py  enums.py  itemGUI.py  itemUtil.py  persistence.py
resources/: credentials.txt
test/: __init__.py  test_boardUtil.py  test_db.py  test_itemGUI.py  test_itemUtil.py  test_persistence.py
