[project]
name = "kanban-gui"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
"certifi>=2024.7.4",
"chardet==4.0.0",
"charset-normalizer>=3.4.4",
"colorama>=0.4.6",
"dnspython>=2.8.0",
"idna>=3.11",
"iniconfig>=2.3.0",
"Jinja2>=3.1.6",
"MarkupSafe==2.0.1",
"packaging>=25.0",
"pillow>=12.0.0",
"pluggy>=1.5.0",
"pymongo>=4.14.1",
"pytest==8.1.1",
"requests>=2.32.5",
"ttkbootstrap>=1.14.2",
"urllib3>=2.6.0",
]

[tool.uv]